Revision history for Perl extension Devel::Timer.

0.03
    - use warnings

0.02 2006 September 3
    - Maintainer change -> Jay Hannah and Gabor Szabo
    - use Build.PL (and keep autogenerated Makefile.PL)
    - clean up test and use Test::More
    - test pods

0.01  Sun Feb 11 13:02:18 2001
	- initial version
