@@ -6,7 +6,9 @@ COPYING
 Build.PL
 Makefile.PL
 MyTimer.pm
-Timer.pm
+
+lib/Devel/Timer.pm
+
 t/test.t
 t/pod.t
 t/pod-coverage.t
