@@ -1,12 +1,11 @@
 use strict;
 use warnings;
 
-use Test::More tests => 1;
+use Test::More;
 eval {
     require Test::Pod::Coverage;
     import Test::Pod::Coverage;
 };
 plan skip_all => "Test::Pod::Coverage 1.00 required for testing POD coverage" if $@;
-#all_pod_coverage_ok();
-pod_coverage_ok('Timer.pm');
+all_pod_coverage_ok();
 
